app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;


:root {
  --foreground-rgb: 226, 232, 240;
  --background-start-rgb: 2, 6, 23;
  /* slate-950 */
  --background-end-rgb: 15, 23, 42;
  /* slate-900 */
}

body {
  color: rgb(var(--foreground-rgb));
  background: rgb(var(--background-start-rgb));
  overflow: hidden;
  /* Prevent body scroll, handle in columns */
}

/* Custom Scrollbar */
.custom-scrollbar::-webkit-scrollbar {
  width: 6px;
}

.custom-scrollbar::-webkit-scrollbar-track {
  background: transparent;
}

.custom-scrollbar::-webkit-scrollbar-thumb {
  background-color: rgba(51, 65, 85, 0.5);
  border-radius: 20px;
}

.custom-scrollbar::-webkit-scrollbar-thumb:hover {
  background-color: rgba(71, 85, 105, 0.8);
}

